test/official_tests/function/local_mutual_recursion.lox
{
  fun isEven(n) {
    if (n == 0) return true;
    return isOdd(n - 1); // error: {"line":4,"message":"Undefined variable 'isOdd'","type":"RuntimeError"}
  }

  fun isOdd(n) {
    if (n == 0) return false;
    return isEven(n - 1);
  }

  isEven(4);
}